--- a/gallerie.html
+++ b/gallerie.html
@@ -4,7 +4,10 @@
 	<title>Gallerie</title>
 	<meta charset="utf-8">
 	<link href="gallerie.css" rel="stylesheet">
-
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta
+		name="description"           
+		content="cette page contient la page gallerie">
 	<script type="text/javascript">
 	
 function m(){
@@ -30,11 +33,11 @@ function m(){
 <div class="header-nav">
                    
                   <div class="jj"> 
-                  <a href="accueil.html"><img src="image/logo1.jpg" alt="#" class="navlogo"></a>  
-                  <img src="image/menu-icon.png" id="mmaa" onclick="m()" class="icon">
+                  <a href="index.html"><img src="image/logo1.jpg" alt="#" class="navlogo"></a>  
+                  <img src="image/menu-icon.png" id="mmaa" onclick="m()" alt="#"  class="icon">
                   </div>
                           <nav class="main-menu">
-                                 <a href="accueil.html" >Accueil</a> 
+                                 <a href="index.html" >Accueil</a> 
                                  <a href="gallerie.html" id="active">Gallerie</a> </li>
                                  <a href="reservation.html">Réservation</a></li>
                                  <a href="contact.html">Contact Nous</a></li>
@@ -47,7 +50,7 @@ function m(){
 <div class="n1menu" id="ll">
 	
 	 <div  id="idmenu">
-                                 <a href="accueil.html" >Accueil</a> 
+                                 <a href="index.html" >Accueil</a> 
                                  <a href="gallerie.html">Gallerie</a> </li>
                                  <a href="reservation.html">Réservation</a></li>
                                  <a href="contact.html">Contact Nous</a></li>
@@ -93,10 +96,10 @@ function m(){
 <footer class="ff">
 	<p id="sn">Suivez-nous</p> 
 	<div class="fc">
-						<img src="icon/facebook.png">
-                        <img src="icon/Twitter.png">
-                        <img src="icon/linkedin.png">
-                        <img src="icon/instagram.png">
+						<img src="icon/facebook.png" alt="#">
+                        <img src="icon/Twitter.png" alt="#">
+                        <img src="icon/linkedin.png" alt="#">
+                        <img src="icon/instagram.png" alt="#">
      <p id="cr">Copyright © 2018 - 2021 CH CAR </p>
   </div>
 </footer>
